Project

General

Profile

Actions

Bug #18751

closed

Regression on master for Method#== when comparing public with private method

Bug #18751: Regression on master for Method#== when comparing public with private method

Added by Eregon (Benoit Daloze) over 4 years ago. Updated almost 4 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 3.2.0dev (2022-04-23T02:59:20Z master e142bea799) [x86_64-linux]
[ruby-core:108378]

Description

This script repros:

class C
  class << self
    alias_method :n, :new
    private :new
  end
end

p C.method(:n) == C.method(:new) # => true

puts
p C.method(:n) == Class.method(:new) # => false
p C.method(:n) == Class.method(:new).unbind.bind(C) # => true

puts
p C.method(:new) == Class.method(:new) # => false
p C.method(:new) == Class.method(:new).unbind.bind(C) # => true, BUT false on master
p C.method(:new) == Class.instance_method(:new).bind(C) # => true, BUT false on master
p [C.method(:new), Class.instance_method(:new).bind(C)] # => [#<Method: #<Class:C>(Class)#new(*)>, #<Method: #<Class:C>(Class)#new(*)>]

So this prints the expected results on 2.7.5, 3.0.3, 3.1.1 but not on master, which seems a regression.
Notably this breaks the pattern discussed in https://bugs.ruby-lang.org/issues/18729#note-5, and it means there is no way to find out if two methods share the same "definition/logic/def", which is a big limitation.


Related issues 5 (1 open — 4 closed)

Related to Ruby - Bug #18729: Method#owner and UnboundMethod#owner are incorrect after using Module#public/protected/privateClosedEregon (Benoit Daloze)Actions
Related to Ruby - Bug #18435: Calling `protected` on ancestor method changes result of `instance_methods(false)`ClosedEregon (Benoit Daloze)Actions
Related to Ruby - Feature #18969: Compare only method definitions for Method#== and UnboundMethod#==ClosedActions
Related to Ruby - Feature #11689: Add methods allow us to get visibility from Method and UnboundMethod object.OpenActions
Related to Ruby - Feature #18798: `UnboundMethod#==` with inherited classesClosedActions
Actions

Also available in: PDF Atom