Consider aliased methods pointing to the same definition equal for compatibility

* Fixes [Bug #18751]
* The useful and desired behavior for {Method,UnboundMethod}#== is
  to compare definitions. [Bug #18751]
* Previously, public/etc created zsuper methods, and those were indirectly
  equal due to resolving zsuper methods on lookup in Kernel#method and
  Module#instance_method. Now such methods correctly have a different
  owner but should still be == since they use the same method definition.